# pls

./: .gitignore  .gitmodules  .ignore  Cargo.toml  LICENSE  README.md
.github/workflows/: mdbook.yml  rust-tests.yml
crates/pls/: Cargo.toml
crates/pls-types/: Cargo.toml
crates/pls-types/src/: composer.rs  lib.rs  php.rs  php_namespace.rs  uri_ext.rs
crates/pls/src/: analyze.rs  backend.rs  code_action.rs  compat.rs  composer.rs  config.rs  db.rs  diagnostics.rs  file.rs  global_state.rs  lib.rs  main.rs  messages.rs  php_namespace.rs  registry.rs  scope.rs  stubs.rs
crates/pls/src/handlers/: dispatch.rs  mod.rs  notification.rs  request.rs
crates/pls/tests/: main.rs  support.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  features.md  references.md
src/: analyze.rs  backend.rs  code_action.rs  compat.rs  composer.rs  diagnostics.rs  file.rs  main.rs  messages.rs  msg.rs  php_namespace.rs  scope.rs  server.rs  stubs.rs  types.rs
