[package]
name = "phplsp"
version = "0.1.0"
edition = "2021"
description = "A very bad implementation of a PHP Language Server, in Rust of course."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tower-lsp = "0.20"
tree-sitter = "0.22"
tree-sitter-php = "0.23"

[build-dependencies]
cc = "*"
