[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
description = "A very bad implementation of a PHP Language Server, in Rust of course."

[workspace.dependencies]
async-channel = "2.3.1"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tower-lsp-server = "0.21"
tree-sitter = "0.25"
tree-sitter-php = "0.24"
tree-sitter-phpdoc = { path = "tree-sitter-phpdoc" }

pls = { path = "crates/pls" }

[workspace.build-dependencies]
cc = "*"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
