[package]
name = "pls"
version = "0.1.0"
edition.workspace = true
description.workspace = true

[dependencies]
async-channel.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp-server.workspace = true
tree-sitter.workspace = true
tree-sitter-php.workspace = true
tree-sitter-phpdoc.workspace = true
