[package]
name = "pls"
version = "0.1.0"
edition.workspace = true
description.workspace = true

[dependencies]
colog = "1.3.0"
crossbeam-channel = "0.5.15"

regex.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
tree-sitter.workspace = true
tree-sitter-php.workspace = true
tree-sitter-phpdoc.workspace = true

pls-types.workspace = true
